# arbitration_v2

./: Cargo.toml
.github/workflows/: rust.yml
backend/: .env  .gitignore  Cargo.toml
backend/migrations/: 20260209183536_init.sql  20260214175423_init.sql  20260218182351_init.sql  20260219160701_init.sql
backend/rust_bot/: Cargo.toml  build.rs
backend/rust_bot/migrations/: 20260219160701_init.sql
backend/rust_bot/src/: main.rs
backend/src/: main.rs
backend/src/adapters/: binance_adapter.rs  bybit_adapter.rs  gate_adapter.rs  kucoin_adapter.rs
backend/src/exchanges/: binance.rs  binance_ws.rs  binx_ws.rs  bybit_ws.rs  exchange_adapter.rs  exchange_setup.rs  gate_rs.rs  kucoin_ws.rs  lbank_ws.rs  mexc_ws.rs  mod.rs  orderbook.rs  websocket.rs
backend/src/models/: aggregator.rs  candle.rs  exchange.rs  exchange_aggregator.rs  line.rs  mod.rs  orderbook.rs  user.rs  websocket.rs
backend/src/services/: aggregator.rs  cache_aggregator.rs  data_access_layer.rs  data_aggregator.rs  data_mapping.rs  exchange_aggregator.rs  mod.rs  (+8 more)
backend/user_api/: .env  db.py  main.py  requirements.txt
cert/: cert.pem  key.pem
frontend/: jsconfig.json  package-lock.json  package.json  vue.config.js
frontend/public/: index.html
frontend/src/: App copy.vue  App.vue  config.js  main.js
src/: exchange.rs  main.rs  websocket copy.rs  websocket.rs
src/exchanges/: binance.rs  binance_ws.rs  binx.rs  binx_ws copy.rs  binx_ws.rs  bybit copy.rs  bybit.rs  bybit_ws.rs  kucoin.rs  kucoin_ws.rs  mexc.rs  mexc_ws.rs  mod.rs  orderbook.rs  websocket.rs
src/telegram/: bot.rs
(+118 files in other folders)
