[package]
name = "arbitration"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version="0.13.1", features=["json"] }
serde = "1.0.228"
serde_json = "1.0.148"
tokio = { version="1", features=["full"] }
teloxide = { version = "0.12", features = ["full"] }
anyhow = "1.0.100"
dotenv = "0.15.0"
tokio-tungstenite = {version="0.28.0", features=["rustls-tls-webpki-roots"]}
url = "2.5.8"
futures-util = "0.3.31"

