[package]
name = "arbitration"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
reqwest = { version="0.13.1", features=["json"] }
serde = "1.0.228"
serde_json = "1.0.148"
tokio = { version="1", features=["full"] }
teloxide = { version = "0.12", features = ["full"] }
anyhow = "1.0.100"
dotenv = "0.15.0"
tokio-tungstenite = {version="0.20", features=["rustls-tls-webpki-roots"]}
url = "2.5.8"
futures-util = "0.3.31"
rustls = "0.21"
rustls-pemfile = "1.0"
tokio-rustls = "0.23"
tracing = "0.1.44"
flate2 = "1.1.5"
dashmap = "6.1.0"
async-channel = "2.5.0"
rand = "0.8"
uuid = "1.19.0"
tokio-util = "0.7"
regex = "1.12.2"
prost = "0.12"
prost-types = "0.12"
wiremock = "0.6.5"

[build-dependencies]
prost-build = "0.12"
